<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL" Id="{a48708eb-b6e0-4460-9563-ae896fb60729}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
		MAX_BUFFER_SIZE : UDINT := 300;
		// Global variable for the MagnitudeSpectrum 
		cOversamples 	: UDINT 	:= 10;		// number of oversamples
		//cMaxChannels	: UDINT		:= 6; 		// number of the channel of the oversampling sensors
		cWindowLength	: UDINT		:= 3200;	// internal buffer size with 50% overlapping
		cBufferLength	: UDINT		:= cWindowLength/2;;	// buffer size
		
		cFFTLength		: UDINT		:= 4096;	// length of FFT for mag. spectrum	
		cFFTResult 		: UDINT 	:= cFFTLength/2+1;	// result of mag. spectrum (cFFTLength/2+1)
		cSamplingRate 	: UDINT		:= 10000; // Samplingrate of input signale(Accelerationssignal)
		
	
			
//		cFFTLength		: UDINT		:= 2048;				  // length of FFT 
//		cWindowLength   : UDINT     := 1800;				  // window length
//		cBufferLength	: UDINT		:= cWindowLength/2;	      // buffer size
//		cFFTResult 		: UDINT 	:= cFFTLength/2+1;		  // result of mag. spectrum - cFFTLength/2+1

	// Scenario 1:  Scaling such that amplitde of spectrum at MAIN.fSetFrequency should be MAIN.fSetAmplitude.
	//              Due to scalloping losses this is not exactly the case. 
	//              E.g. MAIN.fSetFrequency = 200 Hz -> Magnitude Spectrum peak = 12,989... ; Power Spectrum peak is squared value 12,989^2
	//              E.g. set MAIN.fSetFrequency = 185 Hz -> Magnitude Spectrum peak = 12,918... ; Power Spectrum peak is squared value 12,989^2    										 

		cDecibelScale   : BOOL      := FALSE;
		cScaling        : E_CM_ScalingType := eCM_PeakAmplitude;

	// Scenario 2: both spectra (power- and magnitude spectrum) are identical, due to decibel scaling!

	// cDecibelScale   : BOOL      := TRUE;
	// cScaling        : E_CM_ScalingType := eCM_PeakAmplitude;	

	// Scenario 3: Scaling such that summation over frequency bins is related to RMS value, in sine case MAIN.fSetAmplitude/sqrt(2) = 9.1924
	//             see Scaling Options for equations and line 57ff of MAIN POU for details.  
	
	// cDecibelScale   : BOOL      := FALSE;
	// cScaling        : E_CM_ScalingType := eCM_RMS;
		
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>